<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">NethackEncyclopedia</string>
    <string name="app_name">Nethack Encyclopedia</string>
    <string name="project_url">http://github.com/movitto/nethack-encyclopedia</string>

    <string name="project_license_text">Freely distributed under the\nMIT license</string>
    <string name="project_license">MIT license</string>
    <string name="project_license_url">http://www.opensource.org/licenses/mit-license.php</string>

    <string name="project_author_text">By /dev/null Productions</string>
    <string name="project_author">Mo Morsi</string>
    <string name="project_author_url">http://mo.morsi.org</string>

    <string name="about_dialog_title">About</string>

    <string name="attack_number">#</string>
    <string name="armor_damage">Damage Taken (min/max):</string>
    <string name="total_armor_hit_prob">Total Hit Probability (min/max):</string>
    <string name="armor_hit_prob_per_attack">Hit Probability (per attack):</string>
    <string name="weapon_damage">Weapon Damage (min/max):</string>

    <string name="quick_stats_prompt">Quick Stats:</string>
    <string-array name="quick_stats_array">
        <item>Select Statistic...</item>
        <item>Potions</item>
        <item>Scrolls</item>
        <item>Gems</item>
        <item>Armor</item>
        <item>Rings</item>
        <item>Tools</item>
        <item>Wands</item>
        <item>Corpses Nutrition</item>
    </string-array>
    <string name="potions_quick_stat">Potions</string>
    <string name="scrolls_quick_stat">Scrolls</string>
    <string name="gems_quick_stat">Gems</string>
    <string name="armor_quick_stat">Armor</string>
    <string name="rings_quick_stat">Rings</string>
    <string name="tools_quick_stat">Tools</string>
    <string name="wands_quick_stat">Wands</string>
    <string name="corpses_quick_stat">Corpses Nutrition</string>

    <string name="calculator_prompt">Calculator:</string>
    <string-array name="calculator_array">
        <item>Select Tool...</item>
        <item>Armor</item>
        <item>Damage</item>
        <item>Spells</item>
    </string-array>
    <string name="armor_calculator">Armor</string>
    <string name="damage_calculator">Damage</string>
    <string name="spells_calculator">Spells</string>
    <string-array name="monster_size_array">
        <item>small</item>
        <item>large</item>
    </string-array>
    <string-array name="with_without_array">
        <item>with</item>
        <item>without</item>
    </string-array>
    <string name="classes_calc_int_wis_label">with intelligence/wisdom</string>
    <string name="classes_calc_int_label">with intelligence</string>
    <string name="classes_calc_wis_label">with wisdom</string>

    <string name="search_messages_hint">Search for Message</string>

    <string name="game_tracker_prompt">Select:</string>
    <string-array name="game_tracker_array">
        <item>Select...</item>
        <item>Player Stats</item>
        <item>Level Info</item>
        <item>Item Info</item>
        <item>Notes</item>
    </string-array>

    <string name="player_tracker">Player Stats</string>
    <string name="level_tracker">Level Info</string>
    <string name="item_tracker">Item Info</string>
    <string name="notes_tracker">Notes</string>
    <string name="reset_tracker">Are you sure you want to reset?</string>

    <string name="strength_stat">Strength</string>
    <string name="dexterity_stat">Dexterity</string>
    <string name="constitution_stat">Constitution</string>
    <string name="intelligence_stat">Intelligence</string>
    <string name="wisdom_stat">Wisdom</string>
    <string name="charisma_stat">Charisma</string>

    <string name="notes_label">Label</string>
    <string name="notes_value">Note:</string>

    <string-array name="level_parents">
        <item>Select...</item>
        <item>Mazes of Menace</item>
        <item>Dungeons of Doom</item>
        <item>Gnome Mines</item>
        <item>Gehennom</item>
    </string-array>

    <string name="level_level">Level</string>
    <string name="level_parent"></string>
    <string name="level_num">Level #</string>

    <string name="level_stores">Stores</string>
    <string name="level_store">General Store</string>
    <string name="level_armor_store">Armor Store</string>
    <string name="level_bookstore">Book Store</string>
    <string name="level_liquor_shop">Liquor Shop</string>
    <string name="level_weapon_shop">Weapon Shop</string>
    <string name="level_delicatessan">Delicatessan</string>
    <string name="level_jeweler">Jeweler</string>
    <string name="level_apparel_shop">Apparel Shop</string>
    <string name="level_hardware_store">Hardware Store</string>
    <string name="level_rare_book_store">Rare Book Store</string>
    <string name="level_lighting_store">Lighting Store</string>

    <string name="level_features">Features</string>
    <string name="level_fountains">Fountains</string>
    <string name="level_aligned_altars">Aligned Altars</string>
    <string name="level_x_aligned_altars">X-Aligned Altars</string>
    <string name="level_neutral_altars">Neutral Altars</string>
    <string name="level_sinks">Sinks</string>
    <string name="level_thrones">Thrones</string>
    <string name="level_temples">Temples</string>

    <string name="level_stash">Stash</string>

    <string name="level_special">Special Levels</string>
    <string name="level_oracle">Oracle</string>
    <string name="level_mines">Mines</string>
    <string name="level_minetown">MineTown</string>
    <string name="level_mines_end">Mines End</string>
    <string name="level_sokoban">Sokoban</string>
    <string name="level_ludios">Ludios</string>
    <string name="level_rogue">Rogue</string>
    <string name="level_quest">Quest</string>
    <string name="level_medusa">Medusa</string>
    <string name="level_castle">Castle</string>
    <string name="level_gehennom">Gehennom</string>
    <string name="level_valley">Valley</string>
    <string name="level_azmodeus">Azmodeus</string>
    <string name="level_juiblex">Juiblex</string>
    <string name="level_baalzebub">Baalzebub</string>
    <string name="level_orcus_town">Orcus Town</string>
    <string name="level_wizards_tower">Wizards Tower</string>
    <string name="level_fake_wizards_tower">Fake Wizards Tower</string>
    <string name="level_vibrating_square">Vibraring Square</string>
    <string name="level_moloch">Moloch</string>
    <string name="level_vlad">Vlad</string>

    <string-array name="item_types">
        <item>Select...</item>
        <item>Potion</item>
        <item>Scroll</item>
        <item>Wand</item>
        <!--Item DB's need to be flushed out (w/ required attributes):
        <item>SpellBook</item>
        <item>Ring</item>
        <item>Amulet</item>
        <item>Gem</item>-->
    </string-array>

    <string name="item_type">Item Type</string>
    <string name="item_name">Item Name</string>
    <string name="item_appearance">Appearance</string>
    <string name="item_buy_price">Buy</string>
    <string name="item_sell_price">Sell</string>

    <string-array name="potion_appearances">
        <item>select...</item>
        <item>clear</item>
        <item>cursed clear</item>
        <item>uncursed clear</item>
        <item>ruby</item>
        <item>pink</item>
        <item>orange</item>
        <item>yellow</item>
        <item>emerald</item>
        <item>dark green</item>
        <item>cyan</item>
        <item>sky blue</item>
        <item>brilliant blue</item>
        <item>magenta</item>
        <item>purple-red</item>
        <item>puce</item>
        <item>milky</item>
        <item>swirly</item>
        <item>bubbly</item>
        <item>smoky</item>
        <item>cloudy</item>
        <item>effervescent</item>
        <item>black</item>
        <item>golden</item>
        <item>brown</item>
        <item>fizzy</item>
        <item>dark   </item>
        <item>white</item>
        <item>murky</item>
    </string-array>
    <string name="potion_quaff_effect">Quaff Effect</string>
    <string name="potion_throw_effect">Throw Effect</string>

    <string-array name="scroll_appearances">
        <item>select...</item>
        <item>stamped</item>
        <item>unlabeled</item>
        <item>ZELGO MER</item>
        <item>JUYED AWK YACC</item>
        <item>NR 9</item>
        <item>XIXAXA XOXAXA XUXAXA</item>
        <item>PRATYAVAYAH</item>
        <item>DAIYEN FOOELS</item>
        <item>LEP GEX VEN ZEA</item>
        <item>PRIRUTSENIE</item>
        <item>ELBIB YLOH</item>
        <item>VERR YED HORRE</item>
        <item>VENZAR BORGAVVE</item>
        <item>THARR</item>
        <item>YUM YUM</item>
        <item>KERNOD WEL</item>
        <item>ELAM EBOW</item>
        <item>DUAM XNAHT</item>
        <item>ANDOVA BEGARIN</item>
        <item>KIRJE</item>
        <item>VE FORBRYDERNE</item>
        <item>HACKEM MUCHE</item>
        <item>VELOX NEB</item>
        <item>FOOBIE BLETCH</item>
        <item>TEMOV</item>
        <item>GARVEN DEH</item>
        <item>READ ME</item>
    </string-array>
    <string name="scroll_read_effect">Read Effect</string>

    <string-array name="wand_appearances">
        <item>select...</item>
        <item>glass</item>
        <item>balsa</item>
        <item>crystal</item>
        <item>maple</item>
        <item>pine</item>
        <item>oak</item>
        <item>ebony</item>
        <item>marble</item>
        <item>tin</item>
        <item>brass</item>
        <item>copper</item>
        <item>silver</item>
        <item>platinum</item>
        <item>iridium</item>
        <item>zinc</item>
        <item>aluminum</item>
        <item>uranium</item>
        <item>iron</item>
        <item>steel</item>
        <item>hexagonal</item>
        <item>short</item>
        <item>runed</item>
        <item>long</item>
        <item>curved</item>
        <item>forked</item>
        <item>spiked</item>
        <item>jeweled</item>
    </string-array>
    <string name="wand_engrave_effect">Engrave Effect</string>
    <string name="wand_zap_effect">Zap Effect</string>

    <string-array name="spellbook_appearances">
        <item></item>
    </string-array>

    <string-array name="ring_appearances">
        <item></item>
    </string-array>

    <string name="ring_sink_effect">Sink Drop Effect</string>
    <string-array name="ring_sink_effects">
        <item></item>
    </string-array>

    <string name="ring_wear_effect">Worn Effect</string>
    <string-array name="ring_wear_effects">
        <item></item>
    </string-array>

    <string-array name="amulet_appearances">
        <item></item>
    </string-array>

    <string name="amulet_wear_effect">Worn Effect</string>
    <string-array name="amulet_wear_effects">
        <item></item>
    </string-array>

    <string-array name="gem_appearances">
        <item></item>
    </string-array>

    <string name="gem_engraving_type">Engraving Type</string>
    <string-array name="gem_engraving_types">
        <item></item>
    </string-array>

    <string name="gem_streak_color">Streak Color</string>
    <string-array name="gem_streak_colors">
        <item></item>
    </string-array>
</resources>
