<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="20">

    <TextView
        android:id="@+id/about_title"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="top|center_horizontal"
        android:text="@string/app_name" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="10"
        android:src="@drawable/about" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="5"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="10px"
        android:paddingRight="10px">

        <TextView
            android:id="@+id/about_authors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:text="@string/project_author_text" />

        <TextView
            android:id="@+id/about_license"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/project_license_text" />
    </LinearLayout>

    <Button
        android:id="@+id/about_close"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5px"
        android:layout_weight="2"
        android:text="Close" />
</LinearLayout>